2009-10-19  Girish Ramakrishnan  <girish@forwardbias.in>

        Reviewed by Holger Freyther.

        [Qt] Windowed Plugins: Don't crash when client is 0.
        
        Client is 0 when we use QWebPage without a QWebView or QGraphicsWebView.
        In addition, setFrameRect()/updatePluginWidget() is called even if the
        plugin was not succesfully loaded. updatePluginWidget() updates the
        window rect which is, in theory, useful to draw something that indicates
        that we didn't load successfully.
        
        So, a status check is added to setNPWindowIfNeeded.

        https://bugs.webkit.org/show_bug.cgi?id=30380

        * tests/qwebpage/qwebpage.pro:
        * tests/qwebpage/tst_qwebpage.cpp:
        (takeScreenshot):
        (tst_QWebPage::screenshot_data):
        (tst_QWebPage::screenshot):
        * tests/resources/test.swf: Copied from LayoutTests/fast/replaced/resources/test.swf.

2009-10-19  Girish Ramakrishnan  <girish@forwardbias.in>

        Reviewed by Holger Freyther.

        [Qt] Windowed Plugins: Fix crash when QWebPage is deleted after QWebView.
        
        Fixes various sources of crashes:
        1. The PluginContainer is a child of QWebView. When the view gets deleted,
        the PluginView is not notified about the deletion of PluginContainer.
        2. QWebView destructor does not set client to 0.
        3. Sometimes pending paint events are sent after the plugin has died, so add
        a check in PluginView::setNPWindowIfNeeded.

        https://bugs.webkit.org/show_bug.cgi?id=30354

        * Api/qwebview.cpp:
        (QWebView::~QWebView):
        * tests/qwebview/qwebview.pro:
        * tests/qwebview/tst_qwebview.cpp:
        (tst_QWebView::reusePage_data):
        (tst_QWebView::reusePage):

2009-10-19  Jakob Truelsen  <antialize@gmail.com>

        Reviewed by Adam Barth.

        https://bugs.webkit.org/show_bug.cgi?id=29042

        Allow one to costumize the minimal and maximal shrink factors,